--- a/My_Project.ipynb
+++ b/My_Project.ipynb
@@ -244,7 +244,7 @@
         }
       },
       "source": [
-        ""
+        "Hello"
       ],
       "execution_count": 0,
       "outputs": [
@@ -269,7 +269,7 @@
         }
       },
       "source": [
-        ""
+        "Hiiii"
       ],
       "execution_count": 0,
       "outputs": [
