--- a/My_Project.ipynb
+++ b/My_Project.ipynb
@@ -6,6 +6,7 @@
       "name": "My Project.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +46,7 @@
       "metadata": {
         "id": "vc6SzVQg4VQb",
         "colab_type": "code",
-        "outputId": "73875940-72cb-421a-9140-e6cd00193817",
+        "outputId": "a97b1ab0-4fb0-4a79-a5db-2f6fec76f2db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -64,19 +65,19 @@
         "im.save('result.png')\n",
         "imshow(im)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f1e62b59278>"
+              "<matplotlib.image.AxesImage at 0x7f76727ccb38>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 2
         },
         {
           "output_type": "display_data",
@@ -290,7 +291,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "hooooooooooyaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
       ],
       "execution_count": 0,
       "outputs": []
